fix(gantt): use vertical-align middle for gantt treelist content cells

--- a/packages/default/scss/gantt/_layout.scss
+++ b/packages/default/scss/gantt/_layout.scss
@@ -142,6 +142,9 @@
             overflow: hidden;
             overflow-x: scroll;
         }
+        .k-grid-content td {
+            vertical-align: middle;
+        }
     }
 
 
